// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: AppFooter > standard 1`] = `
"<footer data-v-6704560a="" class="app-footer">
  <div data-v-6704560a="" class="footer-divider"></div>
  <div data-v-6704560a="" class="footer-content"><span data-v-6704560a="" class="footer-tagline">Track daily. Stay in budget.</span><span data-v-6704560a="" class="footer-version">v0.1.0</span></div>
</footer>"
`;

exports[`Snapshot: AppHeader > standard 1`] = `
"<header data-v-48a13218="" class="app-header">
  <div data-v-48a13218="" class="brand"><span data-v-48a13218="" class="brand-title">restgeld</span><span data-v-48a13218="" class="brand-dot">.</span></div><button data-v-48a13218="" class="settings-btn" aria-label="Einstellungen" title="Einstellungen"><svg data-v-48a13218="" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
      <circle data-v-48a13218="" cx="12" cy="12" r="3"></circle>
      <path data-v-48a13218="" d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
    </svg></button>
</header>"
`;

exports[`Snapshot: BudgetDisplay > gruen mit ersparnis 1`] = `
"<section data-v-f796b773="" class="budget-display">
  <div data-v-f796b773="" class="budget-header-label">HEUTE VERFÜGBAR</div>
  <div data-v-f796b773="" class="budget-amount color-green">19,24 €</div>
  <div data-v-f796b773="" class="savings-badge badge-green"><span data-v-f796b773=""> +61,36 € Monats-Puffer </span></div>
</section>"
`;

exports[`Snapshot: BudgetDisplay > rot bei minus 1`] = `
"<section data-v-f796b773="" class="budget-display">
  <div data-v-f796b773="" class="budget-header-label">HEUTE VERFÜGBAR</div>
  <div data-v-f796b773="" class="budget-amount color-red">11,55 €</div>
  <div data-v-f796b773="" class="savings-badge badge-red"><span data-v-f796b773="">-38,64 € überzogen </span></div>
</section>"
`;

exports[`Snapshot: BudgetDisplay > weiss bei 0 ersparnis 1`] = `
"<section data-v-f796b773="" class="budget-display">
  <div data-v-f796b773="" class="budget-header-label">HEUTE VERFÜGBAR</div>
  <div data-v-f796b773="" class="budget-amount color-white">14,52 €</div>
  <div data-v-f796b773="" class="savings-badge badge-white"><span data-v-f796b773=""> Perfekt im Plan </span></div>
</section>"
`;

exports[`Snapshot: ExpensesModal > versteckt 1`] = `"<!--v-if-->"`;

exports[`Snapshot: MonthProgress > tag 1/28 (februar) 1`] = `
"<section data-v-3c333b10="" class="month-progress" aria-label="Monatsfortschritt">
  <div data-v-3c333b10="" class="progress-row">
    <div data-v-3c333b10="" class="progress-label">Tag 1 von 28</div>
  </div>
  <div data-v-3c333b10="" class="progress-bar">
    <div data-v-3c333b10="" class="progress-fill" style="width: 4%;"></div>
  </div>
</section>"
`;

exports[`Snapshot: MonthProgress > tag 17/31 1`] = `
"<section data-v-3c333b10="" class="month-progress" aria-label="Monatsfortschritt">
  <div data-v-3c333b10="" class="progress-row">
    <div data-v-3c333b10="" class="progress-label">Tag 17 von 31</div>
  </div>
  <div data-v-3c333b10="" class="progress-bar">
    <div data-v-3c333b10="" class="progress-fill" style="width: 55%;"></div>
  </div>
</section>"
`;

exports[`Snapshot: Numpad > sichtbar 1`] = `
"<div data-v-0450a0c5="" class="modal-overlay">
  <div data-v-0450a0c5="" class="modal-content">
    <div data-v-0450a0c5="" class="modal-header">
      <h2 data-v-0450a0c5="">Ausgabe buchen</h2><button data-v-0450a0c5="" class="close-btn" aria-label="Schließen">×</button>
    </div>
    <form data-v-0450a0c5="" class="modal-body">
      <div data-v-0450a0c5="" class="form-group"><label data-v-0450a0c5="" for="expense-amount-input" class="form-label">Betrag (€)</label>
        <div data-v-0450a0c5="" class="amount-input-wrap"><input data-v-0450a0c5="" id="expense-amount-input" type="text" inputmode="decimal" placeholder="0,00" enterkeyhint="next" autocomplete="off" class="amount-input"><span data-v-0450a0c5="" class="currency-symbol">€</span></div>
      </div>
      <div data-v-0450a0c5="" class="form-group"><label data-v-0450a0c5="" for="expense-note-input" class="form-label">Notiz (optional)</label><input data-v-0450a0c5="" id="expense-note-input" type="text" inputmode="text" placeholder="z. B. Kaffee, Mittagessen" maxlength="50" enterkeyhint="done" class="note-input"></div>
      <div data-v-0450a0c5="" class="form-actions"><button data-v-0450a0c5="" type="button" class="btn btn-cancel"> Abbrechen </button><button data-v-0450a0c5="" type="submit" class="btn btn-confirm" disabled="">
          <!--v-if--><span data-v-0450a0c5="">Speichern</span>
        </button></div>
    </form>
  </div>
</div>"
`;

exports[`Snapshot: Numpad > versteckt 1`] = `"<!--v-if-->"`;

exports[`Snapshot: RecentExpenses > leer 1`] = `
"<section data-v-180b477d="" class="recent-expenses">
  <div data-v-180b477d="" class="section-header">
    <h3 data-v-180b477d="" class="section-title">Letzte Ausgaben</h3>
    <!--v-if-->
  </div>
  <p data-v-180b477d="" class="empty-state">Noch keine Ausgaben heute</p>
</section>"
`;

exports[`Snapshot: RecentExpenses > mit ausgaben 1`] = `
"<section data-v-180b477d="" class="recent-expenses">
  <div data-v-180b477d="" class="section-header">
    <h3 data-v-180b477d="" class="section-title">Letzte Ausgaben</h3><button data-v-180b477d="" class="show-all-btn"><span data-v-180b477d="">Alle anzeigen</span><svg data-v-180b477d="" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
        <polyline data-v-180b477d="" points="9 18 15 12 9 6"></polyline>
      </svg></button>
  </div>
  <ul data-v-180b477d="" class="expense-list">
    <li data-v-180b477d="" class="expense-item"><span data-v-180b477d="" class="expense-note">Frühstück</span><span data-v-180b477d="" class="expense-amount">-8,50 €</span><button data-v-180b477d="" class="delete-btn" aria-label="Löschen"><svg data-v-180b477d="" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
          <polyline data-v-180b477d="" points="3 6 5 6 21 6"></polyline>
          <path data-v-180b477d="" d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"></path>
        </svg></button></li>
    <li data-v-180b477d="" class="expense-item"><span data-v-180b477d="" class="expense-note">Ausgabe</span><span data-v-180b477d="" class="expense-amount">-5,50 €</span><button data-v-180b477d="" class="delete-btn" aria-label="Löschen"><svg data-v-180b477d="" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
          <polyline data-v-180b477d="" points="3 6 5 6 21 6"></polyline>
          <path data-v-180b477d="" d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"></path>
        </svg></button></li>
  </ul>
</section>"
`;
